5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1747_1538.log
== TEST (2019-05-16 10:10:46) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = k - i
soma = 0
while(i < k):
	if((-1 < x < 1) and (k > 0)):
		x = x + ((1) ** i) * (x ** (i + 1))
		i = i + 1
print (x)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    i = k - i
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:11:13) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
soma = 0
while(i < k):
	if((-1 < x < 1) and (k > 0)):
		x = x + ((1) ** i) * (x ** (i + 1))
		i = i + 1
print (x)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    i = k - i
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:11:24) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
soma = 0
while(i < k):
	if((-1 < x < 1) and (k > 0)):
		x = x + ((1) ** i) * (x ** (i + 1))
		i = i + 1
print (x)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    i = k - i
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:11:38) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
soma = 0
while(i < k):
	if((-1 < x < 1) and (k > 0)):
		x = x + ((1) ** i) * (x ** (i + 1))
		i = i + 1
print (x)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    i = k - i
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:12:10) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
i = i - k
soma = 0
while(i < k):
	if((-1 < x < 1) and (k > 0)):
		x = x + ((1) ** i) * (x ** (i + 1))
		i = i + 1
print (x)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    i = k - i
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:12:18) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
i = i - k
soma = 0
while(i < k):
	if((-1 < x < 1) and (k > 0)):
		x = x + ((1) ** i) * (x ** (i + 1))
		i = i + 1
print (x)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    i = k - i
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:16:26) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0

while(i < k):
	if((-1 < x < 1) and (k > 0)):
		x = x + ((-1) ** i) * (x ** (i + 1))
		i = i + 1
print (round (x , 8))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    i = k - i
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:16:34) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0

while(i < k):
	if((-1 < x < 1) and (k > 0)):
		x = x + ((-1) ** i) * (x ** (i + 1))
		i = i + 1
print (round (x , 8))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    i = k - i
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:16:41) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0

while(i < k):
	if((-1 < x < 1) and (k > 0)):
		x = x + ((-1) ** i) * (x ** (i + 1))
		i = i + 1
print (round (x , 8))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    i = k - i
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:18:10) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0

while(i < k):
		x = x + ((-1) ** i) * (x ** (i + 1))
		i = i + 1
print (round (x , 8))	
-- OUTPUT:
-0.13682772
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:19:22) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 1

while(i < k):
		x = x + ((-1) ** i) * (x ** (i + 1))
		i = i + 1
print (round (x , 8))	
-- OUTPUT:
0.26135967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:19:35) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 1

while(i < k):
		x = x + ((-1) ** i) * (x ** (i + 1))
		i = i + 1
print (round (x , 8))	
-- OUTPUT:
0.26135967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:19:42) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 1

while(i < k):
		x = x + ((-1) ** i) * (x ** (i + 1))
		i = i + 1
print (round (x , 8))	
-- OUTPUT:
0.26135967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:19:58) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0

while(i < k):
		x = x + ((-1) ** i) * (x ** (i + 2))
		i = i + 1
print (round (x , 8))	
-- OUTPUT:
0.2087207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:21:01) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
t = 0
while(t < k):
		x = x + ((-1) ** i) * (x ** (i))
		i = i + 2
		t = t + 1
print (round (x , 8))	
-- OUTPUT:
258.35912797
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:21:19) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
t = 0
while(t < k):
		x = x + ((-1) ** i) * (x ** (i))
		i = i + 2
		t = t + 1
print (round (x , 8))	
-- OUTPUT:
258.35912797
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:21:50) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
t = 0
while(t < k):
		x = x + ((-1) ** i) * (x ** i + 2)
		i = i + 1
		t = t + 1
print (round (x , 8))	
-- OUTPUT:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:04) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
t = 0
soma = 0
while(t < k):
		x = soma + ((-1) ** i) * (x ** i + 2)
		soma = x
		i = i + 1
		t = t + 1
print (round (x , 8))	
-- OUTPUT:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:27) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
t = 0
soma = 0
while(t < k):
		x = x + ((-1) ** i) * (x ** i + 2)
		i = i + 1
		t = t + 1
print (round (x , 8))	
-- OUTPUT:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:39:41) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
t = 0
while(i < k):
		x = x + ((-1) ** i) * (x ** (2 * i))
		i = i + 1
		t = t + 1
print (round (x , 8))	
-- OUTPUT:
-0.29116093
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:40:23) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
t = 0
while(i < k):
		x = x + (-(-1) ** i) * (x ** (2 * i))
		i = i + 1
		t = t + 1
print (round (x , 8))	
-- OUTPUT:
-0.25008606
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:40:32) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
t = 0
while(i < k):
		x = x + ((-1) ** i) * (x ** (2 * i))
		i = i + 1
		t = t + 1
print (round (x , 8))	
-- OUTPUT:
-0.29116093
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:41:20) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
t = 0
while(i < k):
		x = x + ((-1)*(-1) ** i) * (x ** (2 * i))
		i = i + 1
		t = t + 1
print (round (x , 8))	
-- OUTPUT:
-0.25008606
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:42:24) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = k - i
t = 0
while(i < k):
		x = x + ((-1) ** i) * (x ** (2 * i))
		i = i + 1
		t = t + 1
print (round (x , 8))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    i = k - i
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:42:41) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
i = k - i
t = 0
while(i < k):
		x = x + ((-1) ** i) * (x ** (2 * i))
		i = i + 1
		t = t + 1
print (round (x , 8))	
-- OUTPUT:
0.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:42:44) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
i = k - i
t = 0
while(i < k):
		x = x + ((-1) ** i) * (x ** (2 * i))
		i = i + 1
		t = t + 1
print (round (x , 8))	
-- OUTPUT:
0.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:43:09) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
i = k - i

while(i < k):
		x = x + (-(-1) ** i) * (x ** (2 * i))
		i = i + 1
print (round (x , 8))	
-- OUTPUT:
0.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:43:50) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
i = k - i

while(i < k):
		x = x + (-(-1) ** i) * (x ** (2 * i))
		i = i + 2
print (round (x , 8))	
-- OUTPUT:
0.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:51:21) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
t = 0
while(t <= k):
	x = x + ((-1) * (-1) ** (i -1)) * (x ** i)
	i = i + 2
	t = t + 1
print(x)
	
-- OUTPUT:
297401298280885.94
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:51:30) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
t = 0
while(t <= k):
	x = x + ((-1) ** (i -1)) * (x ** i)
	i = i + 2
	t = t + 1
print(x)
	
-- OUTPUT:
-1.0467726531258268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:51:45) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
t = 0
while(t < k):
	x = x + ((-1) ** (i -1)) * (x ** i)
	i = i + 2
	t = t + 1
print(x)
	
-- OUTPUT:
-0.7947612674850815
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:52:05) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
t = 0
while(t < k):
	x = x + ((-1)*(-1) ** (i -1)) * (x ** i)
	i = i + 2
	t = t + 1
print(x)
	
-- OUTPUT:
258.3591279673738
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:52:10) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
t = 0
while(t < k):
	x = x + ((-1)*(-1) ** (i -1)) * (x ** i)
	i = i + 2
	t = t + 1
print(x)
	
-- OUTPUT:
258.3591279673738
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:52:31) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
t = 0
while(t < k):
	x = x + (-1)*((-1) ** (i -1)) * (x ** i)
	i = i + 2
	t = t + 1
print(x)
	
-- OUTPUT:
258.3591279673738
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:52:44) 
-- CODE:
# Entradas
x = float(input("Insira um numero real: "))
k = int(input("Insira a quantidade de termos da serie: "))
# termo geral:
# i = ((-1)**i) * (x ** i + 1)
i = 0
t = 0
while(t < k):
	x = x + (-1)*((-1) ** (i -1) * (x ** i))
	i = i + 2
	t = t + 1
print(x)
	
-- OUTPUT:
258.3591279673738
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
